# SIPSoftClient

./: AUTHORS  Makefile.am  autogen.sh  configure.ac
data/: Makefile.am  Makefile.am~  org.maemo.sipphone.service.in  org.maemo.sipphone.service.in~  sipphone.desktop
debian/: changelog  control  copyright  rules  telepathy-sofiasip.install
src/: .tp_caller.c.swp  Makefile.am  phoneguiinterface.c  phoneguiinterface.h  sipclient.c  sipphone.config  tp_caller.c  tp_caller.h
src/.deps/: phoneguiinterface.Po  sipclient.Po  tp_caller.Po
src/utilities/: Bossabo.m4a
